--- a/assignment.css
+++ b/assignment.css
@@ -196,6 +196,10 @@ justify-content: space-around;
     font-size: 2em;
     color: rgb(87, 81, 81);
 }
+#service-card{
+    padding: 20px;
+    font-size: 4em;
+}
 .Website {
     background: #fff;
     padding: 10px;
