--- a/assignment.css
+++ b/assignment.css
@@ -235,8 +235,13 @@ justify-content: space-around;
     font-size: 2em;
     
 }
-.social i{
-    padding: 10px;
+#social{
+    padding: 20px;
+    font-size: 4em;
+}
+.social h3{
+    font-size: 2em;
+    color: rgb(87, 81, 81);
 }
 .social{
     background: #fff;
@@ -244,8 +249,8 @@ justify-content: space-around;
     text-align: center;
     box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
     border-radius: 5px;
-    width: 200px;
-    height: 100px;
+    width: 300px;
+    height: 200px;
 }
 @media(max-width: 360px){
     ul{
