--- a/assignment.css
+++ b/assignment.css
@@ -163,10 +163,10 @@ justify-content: space-around;
     background: #c1baba;
     padding: 50px 20px;
 }
-.services h1{
+.Services h1{
     text-align: center;
-    font-size: 3em;
-   margin-top: -3%;
+    font-size: 4.8em;
+   
    color: rgb(4, 53, 4);
    font-weight: bold;
    padding-bottom: 2%;
