--- a/assignment.css
+++ b/assignment.css
@@ -166,22 +166,22 @@ justify-content: space-around;
 .Services h1{
     text-align: center;
     font-size: 4.8em;
-   
    color: rgb(4, 53, 4);
    font-weight: bold;
    padding-bottom: 2%;
 }
-.services p{
-    width: 45%;
+.Services p{
+    width: 75%;
     padding-bottom: 3%;
-    padding-left: 27%;
+    padding-left: 15%;
+    font-size: 1.5em;
 }
 
 .service-cards {
     display: flex;
     gap: 40px;
     padding-left: 70%;
-    padding: 60px;
+    padding: 40px;
 }
 
 .service-car {
