--- a/assignment.css
+++ b/assignment.css
@@ -174,7 +174,8 @@ justify-content: space-around;
     width: 75%;
     padding-bottom: 3%;
     padding-left: 15%;
-    font-size: 1.5em;
+    font-size: 1.8em;
+    color: rgb(36, 34, 34);
 }
 
 .service-cards {
@@ -182,6 +183,7 @@ justify-content: space-around;
     gap: 40px;
     padding-left: 70%;
     padding: 40px;
+    color: black;
 }
 
 .service-car {
