--- a/assignment.css
+++ b/assignment.css
@@ -181,7 +181,7 @@ justify-content: space-around;
 .service-cards {
     display: flex;
     gap: 40px;
-    padding-left: 70%;
+    justify-content: center;
     padding: 40px;
     color: black;
 }
