--- a/style.css
+++ b/style.css
@@ -255,6 +255,21 @@ justify-content: space-around;
     width: 300px;
     height: 200px;
 }
+.hero h1{
+    text-align: center;
+    padding-top: 8%;
+    color: white;
+    font-size: 4.4em;
+    padding-left: 20%;
+    padding-right: 20%;
+
+}
+.product p{
+    color: white;
+    text-align: center;
+    margin-top: 20px;
+    padding: 0 25%;
+}
 @media(max-width: 360px){
     ul{
         display: none;
