--- a/style.css
+++ b/style.css
@@ -264,7 +264,7 @@ justify-content: space-around;
     padding-right: 20%;
 
 }
-.product p{
+.products p{
     color: white;
     text-align: center;
     margin-top: 20px;
