--- a/style.css
+++ b/style.css
@@ -255,7 +255,7 @@ justify-content: space-around;
     width: 300px;
     height: 200px;
 }
-.hero h1{
+.products h1{
     text-align: center;
     padding-top: 8%;
     color: white;
