--- a/style.css
+++ b/style.css
@@ -258,7 +258,7 @@ justify-content: space-around;
 .products h1{
     text-align: center;
     padding-top: 4%;
-    color: white;
+    color: green;
     font-size: 4.4em;
     padding-left: 20%;
     padding-right: 20%;
