--- a/style.css
+++ b/style.css
@@ -265,7 +265,7 @@ justify-content: space-around;
 
 }
 .products p{
-    color: white;
+    color: gray;
     text-align: center;
     margin-top: 20px;
     padding: 0 25%;
