--- a/style.css
+++ b/style.css
@@ -265,7 +265,8 @@ justify-content: space-around;
 
 }
 .products p{
-    color: gray;
+    font-size: 2.4em;
+    color: black;
     text-align: center;
     margin-top: 20px;
     padding: 0 25%;
