--- a/style.css
+++ b/style.css
@@ -276,6 +276,21 @@ justify-content: space-around;
     height: 500px;
     background-color: gray;
 }
+.box1{
+    width: 400px;
+    height: 500px;
+    background-color: gray;
+}
+.box2{
+    width: 400px;
+    height: 500px;
+    background-color: gray;
+}
+.box1{
+    width: 400px;
+    height: 500px;
+    background-color: gray;
+}
 @media(max-width: 360px){
     ul{
         display: none;
