--- a/style.css
+++ b/style.css
@@ -276,12 +276,12 @@ justify-content: space-around;
     height: 500px;
     background-color: gray;
 }
-.box1{
+.box2{
     width: 400px;
     height: 500px;
     background-color: gray;
 }
-.box2{
+.box{
     width: 400px;
     height: 500px;
     background-color: gray;
