--- a/style.css
+++ b/style.css
@@ -281,7 +281,7 @@ justify-content: space-around;
     height: 500px;
     background-color: gray;
 }
-.box{
+.box3{
     width: 400px;
     height: 500px;
     background-color: gray;
