--- a/style.css
+++ b/style.css
@@ -286,7 +286,7 @@ justify-content: space-around;
     height: 500px;
     background-color: gray;
 }
-.box4{
+.box{
     width: 400px;
     height: 500px;
     background-color: gray;
