--- a/style.css
+++ b/style.css
@@ -271,6 +271,7 @@ justify-content: space-around;
     margin-top: 20px;
     padding: 0 25%;
 }
+.boxes
 .box1{
     width: 400px;
     height: 500px;
