--- a/style.css
+++ b/style.css
@@ -274,6 +274,7 @@ justify-content: space-around;
 .boxes{
     display: flex;
     justify-content: space-around;
+    padding: 12%;
 }
 .box1{
     width: 400px;
