--- a/style.css
+++ b/style.css
@@ -274,8 +274,10 @@ justify-content: space-around;
 .boxes{
     display: flex;
     justify-content: space-around;
-    padding: 12%;
+    padding-top: 7%;
+    padding-bottom: 10%;
 }
+
 .box1{
     width: 400px;
     height: 500px;
