--- a/style.css
+++ b/style.css
@@ -283,6 +283,9 @@ justify-content: space-around;
     height: 500px;
     background-color: gray;
 }
+.box1 img{
+    padding-left: 20%;
+}
 .box2{
     width: 400px;
     height: 500px;
