--- a/style.css
+++ b/style.css
@@ -287,8 +287,9 @@ justify-content: space-around;
     padding-left: 24%;
     padding-top: 8%;
 }
-.box1 h1{
-    padding-left: 24%;
+.box1 h2{
+    padding-left: 44%;
+    padding-top: 5%;
 }
 .box2{
     width: 400px;
