--- a/style.css
+++ b/style.css
@@ -281,7 +281,7 @@ justify-content: space-around;
 .box1{
     width: 400px;
     height: 500px;
-    background-color: gray;
+    background-color: white;
 }
 .box1 img{
     padding-left: 24%;
@@ -290,6 +290,10 @@ justify-content: space-around;
 .box1 h2{
     padding-left: 44%;
     padding-top: 5%;
+}
+.box1 p{
+    width: 85%;
+    padding-left: 2%;
 }
 .box2{
     width: 400px;
