--- a/style.css
+++ b/style.css
@@ -298,7 +298,19 @@ justify-content: space-around;
 .box2{
     width: 400px;
     height: 500px;
-    background-color: gray;
+    background-color: white;
+}
+.box2 img{
+    padding-left: 24%;
+    padding-top: 8%;
+}
+.box1 h2{
+    padding-left: 44%;
+    padding-top: 5%;
+}
+.box1 p{
+    width: 85%;
+    padding-left: 2%;
 }
 .box3{
     width: 400px;
