--- a/style.css
+++ b/style.css
@@ -304,18 +304,30 @@ justify-content: space-around;
     padding-left: 24%;
     padding-top: 8%;
 }
-.box1 h2{
+.box2 h2{
     padding-left: 44%;
     padding-top: 5%;
 }
-.box1 p{
+.box2 p{
     width: 85%;
     padding-left: 2%;
 }
 .box3{
     width: 400px;
     height: 500px;
-    background-color: gray;
+    background-color: white;
+}
+.box3 img{
+    padding-left: 24%;
+    padding-top: 8%;
+}
+.box3 h2{
+    padding-left: 44%;
+    padding-top: 5%;
+}
+.box3 p{
+    width: 85%;
+    padding-left: 2%;
 }
 .box4{
     width: 400px;
