--- a/style.css
+++ b/style.css
@@ -328,6 +328,7 @@ justify-content: space-around;
 .box3 h2{
     padding-left: 44%;
     padding-top: 5%;
+    font-size: 2em;
 }
 .box3 p{
     width: 85%;
