--- a/style.css
+++ b/style.css
@@ -357,6 +357,15 @@ justify-content: space-around;
     padding-left: 2%;
     color: gray;
 }
+.hero{
+    background-image: linear-gradient(to bottom, rgb(0,0,0,0.5), rgb(0,0,0,0.5)), url(assets/image\ 1.png);
+    /* background-repeat: no-repeat;
+    background-position:center ; */
+    background-size: cover;
+    width: 100%;
+    height: 500px;
+
+}
 @media(max-width: 360px){
     ul{
         display: none;
