--- a/style.css
+++ b/style.css
@@ -357,7 +357,7 @@ justify-content: space-around;
     padding-left: 2%;
     color: gray;
 }
-.hero{
+.sustainable{
     background-image: linear-gradient(to bottom, rgb(0,0,0,0.5), rgb(0,0,0,0.5)), url(assets/image\ 1.png);
     /* background-repeat: no-repeat;
     background-position:center ; */
