--- a/style.css
+++ b/style.css
@@ -358,7 +358,7 @@ justify-content: space-around;
     color: gray;
 }
 .sustainable{
-    background-image: linear-gradient(to bottom, rgb(0,0,0,0.5), rgb(0,0,0,0.5)), url(assets/image\ 1.png);
+    background-image: linear-gradient(to bottom, rgb(0,0,0,0.5), rgb(0,0,0,0.5)), url(assets/products/img);
     /* background-repeat: no-repeat;
     background-position:center ; */
     background-size: cover;
