--- a/style.css
+++ b/style.css
@@ -367,7 +367,8 @@ justify-content: space-around;
 
 }
 .sustainable{
-    padding: 25%;
+    padding-top: 20%;
+    color: white;
     
 }
 @media(max-width: 360px){
