--- a/style.css
+++ b/style.css
@@ -56,7 +56,7 @@ margin-left: 0px;
 }
 /* section 2 */
 .hero{
-    background-image: linear-gradient(to bottom, rgb(0,0,0,0.5), rgb(0,0,0,0.5)), url(assets/image\ 1.png);
+    background-image: linear-gradient(to bottom, rgb(0,0,0,0.5), rgb(0,0,0,0.5)), 
     /* background-repeat: no-repeat;
     background-position:center ; */
     background-size: cover;
@@ -370,7 +370,8 @@ justify-content: space-around;
     padding-top: 10%;
     color: white;
     font-size: 3em;
-    
+    padding-left: 6%;
+    padding-right: 8%;
     
 }
 @media(max-width: 360px){
