--- a/style.css
+++ b/style.css
@@ -56,7 +56,7 @@ margin-left: 0px;
 }
 /* section 2 */
 .hero{
-    background-image: linear-gradient(to bottom, rgb(0,0,0,0.5), rgb(0,0,0,0.5)), 
+    background-image: linear-gradient(to bottom, rgb(0,0,0,0.5), rgb(0,0,0,0.5)), url(assets/products/Rectangle\ 4.png);
     /* background-repeat: no-repeat;
     background-position:center ; */
     background-size: cover;
