--- a/style.css
+++ b/style.css
@@ -374,6 +374,26 @@ justify-content: space-around;
     
     
 }
+.btn-get{
+    background-color: green;
+    padding: 8px 20px;
+    color: white;
+    font-size: 2em;
+    margin-left: 33%;
+    border: none;
+    border-radius: 20px;
+}
+.btn-learn{
+    background-color:transparent;
+    padding: 8px 10px;
+    color: white;
+    font-size: 2em;
+    margin-left: 10px;
+    border: 2px solid white;
+    border-radius: 20px;
+    margin-top: 20px;
+    
+}
 @media(max-width: 360px){
     ul{
         display: none;
