--- a/style.css
+++ b/style.css
@@ -374,7 +374,7 @@ justify-content: space-around;
     
     
 }
-.btn-get{
+.btn-learnmore{
     background-color: green;
     padding: 8px 20px;
     color: white;
