--- a/style.css
+++ b/style.css
@@ -375,7 +375,7 @@ justify-content: space-around;
     
 }
 .btn-learnmore{
-    background-color: green;
+    background-color: rgb(23, 23, 100);
     padding: 8px 20px;
     color: white;
     font-size: 2em;
