--- a/style.css
+++ b/style.css
@@ -384,16 +384,15 @@ justify-content: space-around;
     border: none;
     border-radius: 20px;
 }
-.btn-learn{
-    background-color:transparent;
-    padding: 8px 10px;
+.btn-contact{
+    background-color: transparent;
+    padding: 6px 4px;
     color: white;
-    font-size: 2em;
-    margin-left: 10px;
-    border: 2px solid white;
+    font-size: 0.8em;
+    margin-left: 2%;
+    margin-top: 4%;
+    border: none;
     border-radius: 20px;
-    margin-top: 20px;
-    
 }
 @media(max-width: 360px){
     ul{
