--- a/style.css
+++ b/style.css
@@ -391,7 +391,7 @@ justify-content: space-around;
     font-size: 0.8em;
     margin-left: 2%;
     margin-top: 4%;
-    border: 10px;
+    border: 6px solid white;
     border-radius: 20px;
 }
 @media(max-width: 360px){
