--- a/style.css
+++ b/style.css
@@ -394,6 +394,11 @@ justify-content: space-around;
     border: 4px solid white;
     border-radius: 20px;
 }
+.boxxx{
+    width: 400px;
+    height: 500px;
+    background-color: white;
+}
 @media(max-width: 360px){
     ul{
         display: none;
