--- a/style.css
+++ b/style.css
@@ -394,6 +394,7 @@ justify-content: space-around;
     border: 4px solid white;
     border-radius: 20px;
 }
+.qoraal
 .boxxx{
     width: 400px;
     height: 500px;
