--- a/style.css
+++ b/style.css
@@ -415,6 +415,7 @@ justify-content: space-around;
     background-color: white;
     margin-top: 5%;
 }
+#
 @media(max-width: 360px){
     ul{
         display: none;
