--- a/style.css
+++ b/style.css
@@ -415,7 +415,9 @@ justify-content: space-around;
     background-color: white;
     margin-top: 5%;
 }
-#
+#l{
+
+}
 @media(max-width: 360px){
     ul{
         display: none;
