--- a/style.css
+++ b/style.css
@@ -415,7 +415,7 @@ justify-content: space-around;
     background-color: white;
     margin-top: 5%;
 }
-#le{
+#lea{
 
 }
 @media(max-width: 360px){
