--- a/style.css
+++ b/style.css
@@ -416,7 +416,14 @@ justify-content: space-around;
     margin-top: 5%;
 }
 #learn{
-
+    background-color: rgb(23, 23, 100);
+    padding: 6px 10px;
+    color: white;
+    font-size: 0.8em;
+    margin-left: 5%;
+    margin-top: 4%;
+    border: none;
+    border-radius: 20px;
 }
 @media(max-width: 360px){
     ul{
