--- a/style.css
+++ b/style.css
@@ -416,7 +416,7 @@ justify-content: space-around;
     margin-top: 5%;
 }
 #learn{
-    background-color: rgb(23, 23, 100);
+    background-color: rgb(4, 53, 4);;
     padding: 18px 40px;
     color: white;
     font-size: 0.8em;
