--- a/style.css
+++ b/style.css
@@ -412,11 +412,11 @@ justify-content: space-around;
 .boxxx{
     width: 400px;
     height: 500px;
-    background-color: white;
+    background-color: rgb(4, 53, 4);
     margin-top: 5%;
 }
 #learn{
-    background-color: rgb(4, 53, 4);;
+    background-color: rgb(4, 53, 4);
     padding: 18px 40px;
     color: white;
     font-size: 0.8em;
