--- a/style.css
+++ b/style.css
@@ -428,7 +428,12 @@ justify-content: space-around;
 .star{
     display: flex;
     gap: 20px;
+    padding: 5%;
 }
+.star h1{
+color: white;
+}
+ 
 @media(max-width: 360px){
     ul{
         display: none;
