--- a/style.css
+++ b/style.css
@@ -436,9 +436,10 @@ color: white;
 padding-top: 7%;
 font-size: 3em;
 }
-.star h4{
+.star p{
     color: white;
     padding-top: 4%;
+    font-size: 2em;
 }
 .product{
     display: flex;
@@ -454,6 +455,7 @@ font-size: 3em;
 .product p{
     color: white;
     padding-top: 4%;
+    font-size: 2em;
 }
 .check{
     display: flex;
