--- a/style.css
+++ b/style.css
@@ -473,6 +473,22 @@ font-size: 3em;
     padding-top: 4%;
     font-size: 2em;
 }
+.team{
+    display: flex;
+    gap: 20px;
+   
+    padding-left: 20%;
+}
+.check h1{
+color: white;
+padding-top: 7%;
+font-size: 3em;
+}
+.check p{
+    color: white;
+    padding-top: 4%;
+    font-size: 2em;
+}
 
  
 @media(max-width: 360px){
