--- a/style.css
+++ b/style.css
@@ -468,7 +468,7 @@ color: white;
 padding-top: 7%;
 font-size: 3em;
 }
-.team p{
+.check p{
     color: white;
     padding-top: 4%;
     font-size: 2em;
@@ -479,7 +479,7 @@ font-size: 3em;
    
     padding-left: 20%;
 }
-.check h1{
+.team h1{
 color: white;
 padding-top: 7%;
 font-size: 3em;
