--- a/style.css
+++ b/style.css
@@ -484,7 +484,7 @@ color: white;
 padding-top: 7%;
 font-size: 3em;
 }
-.check p{
+.team p{
     color: white;
     padding-top: 4%;
     font-size: 2em;
