--- a/style.css
+++ b/style.css
@@ -61,7 +61,7 @@ margin-left: 0px;
     background-position:center ; */
     background-size: cover;
     width: 100%;
-    height: 500px;
+    height: 100vh;
 
 }
 .hero h1{
