--- a/style.css
+++ b/style.css
@@ -65,10 +65,10 @@ margin-left: 0px;
 
 }
 .hero h1{
-    text-align: center;
+    width: 75%;
     padding-top: 8%;
     color: white;
-    font-size: 4.4em;
+    font-size: 7.4em;
     padding-left: 20%;
     padding-right: 20%;
 
