--- a/style.css
+++ b/style.css
@@ -84,7 +84,7 @@ margin-left: 0px;
 
 .btn-get{
     background-color: green;
-    padding: 8px 20px;
+    padding: 10px 25px;
     color: white;
     font-size: 2em;
     margin-left: 33%;
@@ -106,6 +106,7 @@ margin-left: 0px;
 .about {
 display: flex;
 justify-content: space-around;
+height: 100vh;
 }
 .img{
     width: 35%;
@@ -145,7 +146,7 @@ justify-content: space-around;
 .text{
     padding-left: 2%;
     padding-top: 8%;
-    width: 35%;
+    width: 65%;
    animation-name: anim2;
    animation-duration: 3s;
 }
