--- a/style.css
+++ b/style.css
@@ -170,13 +170,15 @@ height: 100vh;
     margin-top: 4%;
     font-size: 1.5em;
 }
+/* section services */
 .services {
     background: #c1baba;
-    padding: 50px 20px;
+    width: 100%;
+    height: 100vh;
 }
 .Services h1{
     text-align: center;
-    font-size: 4.8em;
+    font-size: 6.8em;
    color: rgb(4, 53, 4);
    font-weight: bold;
    padding-bottom: 2%;
@@ -266,6 +268,7 @@ height: 100vh;
     width: 300px;
     height: 200px;
 }
+/* section products */
 .products h1{
     text-align: center;
     padding-top: 4%;
@@ -368,19 +371,20 @@ height: 100vh;
     padding-left: 2%;
     color: gray;
 }
+/*section sustainable */
 .sustainable{
     background-image: linear-gradient(to bottom, rgb(0,0,0,0.5), rgb(0,0,0,0.5)), url(assets/products/image\ 1.png);
     /* background-repeat: no-repeat;
     background-position:center ; */
     background-size: cover;
     width: 100%;
-    height: 500px;
+    height: 100vh;
 
 }
 .sustainable{
     padding-top: 7%;
     color: white;
-    font-size: 3em;
+    font-size: 4.5em;
     padding-left: 6%;
     
     
